# NTE-Nanally-Assistant

./: .gitignore  =6.5.0  NTENA.manifest  NanallyAssistant.spec  README.md  pyproject.toml  异环_NA.slnx
NTE Nanally Assistant/: NTE Nanally Assistant.pyproj  NTE_Nanally_Assistant.py
builder/: NanallyAssistant.spec  build_nuitka.ps1  setup.iss
docs/: CodingLog.md  README.md  TODO.md
scripts/: DZTG_1_1.toml  DZTG_TuiGuanQia.toml  DiaoYu.toml
src/: main.py  requirement.txt  requirements.txt
src/NTE_Nanally_Assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/core/: main.py  settings.py  toml_runner.py  tools.py  vision.py
src/core/scripts/: DianZhangTeGong_1_1.py  __init__.py  _base.py  combat.py  fishing.py  interaction.py  movement.py
src/core/scripts/DianZhangTeGong/: DianZhangTeGong_1_1.py  _1_1.py  _TuiGuanQia.py
src/core/scripts/DiaoYu/: _DY.py
src/gui/: log_handler.py  main.py  main_window.py  script_worker.py  theme.py  ui.qml
src/scripts/: DZTG_1_1.toml
test/: 1_1方斯脚本.py  position.py  qt5test.py  test.py  tools.py
