[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NTE_Nanally_Assistant"
version = "0.4.0"
authors = [
    { name="Q-wind520", email="mg_fire1030@163.com" },
]
description = "NTE Nanally Assistant 为你轻松处理异环中的重复性劳动，拿到真正的劳动所得！"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# 这里是你的依赖项
dependencies = [
    "mss==10.2.0",
    "numpy>=2.0.0",
    "opencv-python==4.13.0.92",
    "pydirectinput==1.0.4",
    "psutil==7.2.2",
    "pywin32==306",
    "pyside6>=6.5.0,<7.0.0",
]

[project.optional-dependencies]
gui = ["pyside6>=6.5.0,<7.0.0"]

[project.scripts]
nanally = "core.main:main"
nanally-gui = "gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]